examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubefeeds-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubefeeds.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubefeeds-demo
            port:
              number: 80
